[package]
name = "concourse-resource-notion-db"
version = "0.1.0"
edition = "2021"
authors = ["Bernhard Schuster <bernhard@ahoi.io>"]

[dependencies]
color-eyre = "0.6.2"
concourse-resource = "0.3.0"
fs-err = "2.11.0"
notion = "0.5.1"
reqwest = { version = "0.11.22", default-features = false, features = [
  "rustls",
  "rustls-tls-native-roots",
  "trust-dns",
  "json",
  "gzip",
] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
tokio = { version = "1.35.0", features = ["full"] }

[patch.crates-io]
notion = { git = "https://github.com/drahnr/notion.git" }
